--- a/Inventario/Views/Venta/AgregarVentaModal.cshtml
+++ b/Inventario/Views/Venta/AgregarVentaModal.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="modal fade" id="NewCompraModal">
+﻿<div class="modal fade" id="NewVentaModal">
     <div class="modal-dialog modal-lg" style="width: 900px !important;">
         <div class="modal-content">
             <div class="modal-header">
@@ -7,57 +7,60 @@
             </div>
             <form id="NewDetalleForm">
                 <div class="modal-body">
-                    @*Compra*@
+                    @*Venta*@
                     <h5 style="color:#ff6347">Compra</h5>
                     <hr />
                     <div class="form-horizontal">
                         
                         <div class="form-group">
-                            <label class="control-label col-md-2">Codigo Compra</label>
+                            <label class="control-label col-md-2">Codigo venta</label>
                             <div class="col-md-4">
-                                <input type="text" id="CodigoCompra" name="CodigoCompra" placeholder="CodigoCompra" class="form-control" />
+                                <input type="text" id="CodigoVenta" name="CodigoVenta" placeholder="Codigo de Venta" class="form-control" />
                             </div>
                             <label class="control-label col-md-2">Descripción</label>
                             <div class="col-md-4">
-                                <input type="text" id="DescrpCompra" name="DescrpCompra" placeholder="Descripcion" class="form-control" />
+                                <input type="text" id="DescrpVenta" name="DescrpVenta" placeholder="Descripcion" class="form-control" />
                             </div>
-                            <label class="control-label col-md-2">Proveedor</label>
+                            <label class="control-label col-md-2">Cliente</label>
                             <div class="col-md-4">
-                                <input type="hidden" id="ProveedorId" />
-                                <input type="text" id="Proveedor" name="Proveedor" placeholder="Nombre Del Proveedor" class="form-control" />
+                                <input type="hidden" id="ClienteId" />
+                                <input type="text" id="Cliente" name="Cliente" placeholder="Nombre del cliente" class="form-control" />
+                            </div>
+                            <label class="control-label col-md-2">Tipo de pago</label>
+                            <div class="col-md-4">
+                                <input type="hidden" id="TipoPagoId" />
+                                <input type="text" id="TipoPago" name="TipoPago" placeholder="Tipo de pago" class="form-control" />
+                            </div>
+                            <label class="control-label col-md-2">Tipo de venta</label>
+                            <div class="col-md-4">
+                                <input type="hidden" id="TipoVentaId" />
+                                <input type="text" id="TipoVenta" name="TipoVenta" placeholder="Tipo de Venta" class="form-control" />
                             </div>
                         </div>
                     </div>
 
-                    @*Detalle Compra*@
+                    @*Detalle Venta*@
                     <h5 style="margin-top:10px;color:#ff6347;">Detalle</h5>
                     <hr />
                     <div class="form-horizontal">
-                        <input type="hidden" id="DetalleCompraId" />
+                        <input type="hidden" id="DetalleVentaId" />
                         <div class="form-group">
-
-                            
                             <label class="control-label col-md-2">Producto</label>
                             <div class="col-md-4">
                                 <input type="hidden" id="ProductoId" />
                                 <input type="text" id="Producto" name="Producto" placeholder="Producto" class="form-control" />
                             </div>
-                            <label class="control-label col-md-2">Fecha De Vencimiento</label>
-                            <div class="col-md-4">
-                                <input type="date" id="FechaVencim" name="FechaVencim" class="form-control" />
-                            </div>
                             <label class="control-label col-md-2">Cantidad</label>
                             <div class="col-md-4">
                                 <input type="number" id="Cantidad" name="Cantidad" placeholder="Cantidad" class="form-control" />
                             </div>
+                            <label class="control-label col-md-2 pt-4">Precio</label>
+                            <div class="col-md-4">
+                                <input type="number" id="PrecioVenta" name="PrecioVenta" placeholder="Precio de venta" class="form-control" />
+                            </div>
                         </div>
 
-                        <div class="form-group">
-                            <label class="control-label col-md-2 pt-4">Precio</label>
-
-                            <div class="col-md-4">
-                                <input type="number" id="PrecioCompra" name="PrecioCompra" placeholder="Precio De Compra" class="form-control" />
-                            </div>
+                        <div class="form-group" style="margin-left:500px;">
                             <div class="col-md-2 col-lg-offset-4">
                                 <a id="AddToList" class="btn btn-primary">Agregar a la lista</a>
                             </div>
@@ -68,7 +71,6 @@
                                 <tr>
                                     
                                     <th>Producto</th>
-                                    <th>Fecha De Vencimiento</th>
                                     <th>Cantidad</th>
                                     <th>Precio</th>
                                     <th>Total</th>
@@ -76,12 +78,12 @@
                             </thead>
                             <tbody></tbody>
                         </table>
-                        <span class="pull-right" style="margin-right:100px" id="TotalCompra"></span>
+                        <span class="pull-right" style="margin-right:100px" id="TotalVenta"></span>
                     </div>
                 </div>
                 <div class="modal-footer">
                     <button type="reset" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                    <button id="GuardarCompra" type="submit" class="btn btn-danger">Guardar Compra</button>
+                    <button id="GuardarVenta" type="submit" class="btn btn-danger">Guardar Venta</button>
                 </div>
             </form>
         </div>
@@ -89,4 +91,3 @@
     </div>
 
 </div>
-
